# tinkoff-invest-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.claude/: settings.json
src/tinkoff_invest_mcp/: __init__.py  base.py  cache.py  cli.py  client.py  config.py  constants.py  server.py  utils.py
src/tinkoff_invest_mcp/models/: __init__.py  common.py  instrument.py  market_data.py  operations.py  order_request.py  order_response.py  orders.py  portfolio.py  stop_orders.py  trading_schedule.py  trading_status.py
src/tinkoff_invest_mcp/services/: __init__.py  base.py  instruments_service.py  market_data_service.py  operations_service.py  orders_service.py  portfolio_service.py  stop_orders_service.py
src/tinkoff_invest_mcp/tools/: __init__.py  instruments.py  orders.py  registry.py
tests/: __init__.py  conftest.py  test_config.py  test_integration_instruments.py  test_integration_orders.py  test_integration_portfolio.py  test_integration_schedule.py  test_integration_stop_orders.py  test_server.py  test_unit.py
